# quarto-mssql-gemini

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
assets/: ppt-template.pptx
database/: connection.py  schema.csv
docs/: architecture.md  extending.md  quickstart.md
examples/pdf-briefing/: README.md  pdf-briefing.qmd
examples/pdf-briefing-extended/: README.md  pdf-briefing-extended.qmd
examples/pdf-briefing-extended-altair/: README.md  pdf-briefing-extended-altair.qmd
examples/ppt-deck/: README.md  ppt-deck.qmd
examples/sales-dashboard/: README.md  sales-dashboard.qmd
forecasting/: forecasting_app.py  sales_forecaster.py
natural_language/: app_df.py  app_plot.py  app_speech.py  run_chatbot.py
reporting/: ai_analysis.py  app.py  create_combinations.py  current_filters.json  db_setup.py  sales_pdf.qmd  valid_combinations.csv  valid_combinations.py
scripts/: render_all.sh  render_dashboard.py
src/quarto_mssql_gemini/: __init__.py  config.py  data_access.py
src/quarto_mssql_gemini/ai/: __init__.py  captions.py  narrative.py
